// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generated code is unchanged for split: split/types.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/split/openapi.yaml. Do not edit.

export const EmployeeStatus = {
	Active: 'active',
	OnLeave: 'on_leave',
	Left: 'left',
} as const;
export type EmployeeStatus = (typeof EmployeeStatus)[keyof typeof EmployeeStatus];

export interface NewEmployee {
	name: string;
	email: string;
	status?: EmployeeStatus | undefined;
	tags?: string[] | undefined;
}

export interface Employee extends NewEmployee {
	id: string;
	createdAt: string;
	/** Who this employee reports to, if anyone. */
	manager?: Employee | null | undefined;
}

export interface ErrorResponse {
	/** Error status code */
	status?: number | undefined;
	/** A human-readable error message. */
	message?: string | undefined;
	/** An optional debug message for troubleshooting. */
	debugMessage?: string | undefined;
}

export interface ListEmployeesQuery {
	/** The page number to return. */
	page?: number | undefined;
	/** The number of items to return per page. */
	size?: number | undefined;
	status?: EmployeeStatus | undefined;
}

export interface GetEmployeeParam {
	/** The unique identifier of the entity. */
	id: string;
}

export interface UpdateEmployeeParam {
	/** The unique identifier of the entity. */
	id: string;
}

export interface DeleteEmployeeParam {
	/** The unique identifier of the entity. */
	id: string;
}

export interface Operations {
	listEmployees: {
		method: 'get';
		path: '/employees';
		honoPath: '/employees';
		param: {};
		query: ListEmployeesQuery;
		header: {};
		responses: {
			/** The employees. */
			200: {
				'application/json': Employee[];
			};
			/** The request was invalid. */
			400: {
				'application/json': ErrorResponse;
			};
		};
	};
	createEmployee: {
		method: 'post';
		path: '/employees';
		honoPath: '/employees';
		param: {};
		query: {};
		header: {};
		json: NewEmployee;
		responses: {
			/** Created. */
			201: {
				'application/json': Employee;
			};
			/** The request was invalid. */
			400: {
				'application/json': ErrorResponse;
			};
		};
	};
	getEmployee: {
		method: 'get';
		path: '/employees/{id}';
		honoPath: '/employees/:id';
		param: GetEmployeeParam;
		query: {};
		header: {};
		responses: {
			/** The employee. */
			200: {
				'application/json': Employee;
			};
			/** The requested resource was not found. */
			404: {
				'application/json': ErrorResponse;
			};
		};
	};
	updateEmployee: {
		method: 'put';
		path: '/employees/{id}';
		honoPath: '/employees/:id';
		param: UpdateEmployeeParam;
		query: {};
		header: {};
		json: NewEmployee;
		responses: {
			/** The updated employee. */
			200: {
				'application/json': Employee;
			};
			/** The requested resource was not found. */
			404: {
				'application/json': ErrorResponse;
			};
		};
	};
	deleteEmployee: {
		method: 'delete';
		path: '/employees/{id}';
		honoPath: '/employees/:id';
		param: DeleteEmployeeParam;
		query: {};
		header: {};
		responses: {
			/** The resource was successfully deleted */
			204: {};
			/** The requested resource was not found. */
			404: {
				'application/json': ErrorResponse;
			};
		};
	};
}

/** The operation behind each route: \`routes.put(path)\` finds it here. */
export interface OperationsByRoute {
	'get /employees': 'listEmployees';
	'post /employees': 'createEmployee';
	'get /employees/{id}': 'getEmployee';
	'put /employees/{id}': 'updateEmployee';
	'delete /employees/{id}': 'deleteEmployee';
}

/** The paths with an operation for each method. */
export interface PathsByMethod {
	get: '/employees' | '/employees/{id}';
	put: '/employees/{id}';
	post: '/employees';
	delete: '/employees/{id}';
	options: never;
	head: never;
	patch: never;
	trace: never;
	query: never;
}

/** The operations under each tag. */
export interface OperationsByTag {
	employees: 'listEmployees' | 'createEmployee' | 'getEmployee' | 'updateEmployee' | 'deleteEmployee';
}

/** \`PathsByMethod\`, for each tag. */
export interface PathsByTag {
	employees: {
		get: '/employees' | '/employees/{id}';
		put: '/employees/{id}';
		post: '/employees';
		delete: '/employees/{id}';
		options: never;
		head: never;
		patch: never;
		trace: never;
		query: never;
	};
}
"
`;

exports[`generated code is unchanged for split: split/zod.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/split/openapi.yaml. Do not edit.

import { z } from 'zod';
import { EmployeeStatus } from './types.js';
import type { Employee } from './types.js';

export const zEmployeeStatus = z.enum(EmployeeStatus);

export const zNewEmployee = z.object({
	name: z.string().min(1),
	email: z.email(),
	status: zEmployeeStatus.optional(),
	tags: z.array(z.string()).optional(),
});

export const zEmployee: z.ZodType<Employee, Employee> = zNewEmployee.extend({
	id: z.guid(),
	createdAt: z.iso.datetime({ offset: true }),
	get manager() {
		return zEmployee.nullable().optional();
	},
});

export const zErrorResponse = z.object({
	status: z.int().optional(),
	message: z.string().optional(),
	debugMessage: z.string().optional(),
});
"
`;

exports[`generated code is unchanged for split: split/operations.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/split/openapi.yaml. Do not edit.

import { z } from 'zod';
import { zEmployee, zEmployeeStatus, zErrorResponse, zNewEmployee } from './zod.js';
import type { Operations } from './types.js';

/** How a server reads a parameter, and how a client writes it. */
export interface ParameterSpec {
	readonly name: string;
	readonly in: 'path' | 'query' | 'header';
	readonly required: boolean;
	/** A query list as \`?a=1&a=2\` (true) or \`?a=1,2\` (false). */
	readonly explode: boolean;
	/** Validated as a list: every value of a repeated query key, or one split on commas. */
	readonly list: boolean;
}

export interface MediaSpec {
	readonly kind: 'json' | 'form' | 'text' | 'binary';
	/** Absent for binary content, which is passed through unvalidated. */
	readonly schema?: z.ZodType;
}

export interface OperationSpec {
	readonly method: 'get' | 'put' | 'post' | 'delete' | 'options' | 'head' | 'patch' | 'trace' | 'query';
	readonly path: string;
	readonly honoPath: string;
	readonly tags: readonly string[];
	readonly parameters: readonly ParameterSpec[];
	/** Validates the path parameters, each read as a string. */
	readonly param: z.ZodType;
	/** Validates the query: a string per parameter, or every value of a list. */
	readonly query: z.ZodType;
	/** Validates the headers, keyed by lowercased name. */
	readonly header: z.ZodType;
	readonly body?: {
		readonly required: boolean;
		readonly content: { readonly [mediaType: string]: MediaSpec };
	};
	readonly responses: {
		readonly [status: number]: { readonly [mediaType: string]: MediaSpec };
	};
}

/** A location with no parameters declared: whatever arrives there is dropped. */
const none = z.object({});

/** A number in a path, a query or a header: digits, where z.coerce.number() would read '' as 0. */
const numeric = z
	.string()
	.regex(/^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?(?:[eE][+-]?\\d+)?$/)
	.transform(Number);

export const zListEmployeesQuery = z.object({
	page: numeric.pipe(z.int().min(1)).optional(),
	size: numeric.pipe(z.int().min(1)).optional(),
	status: zEmployeeStatus.optional(),
});

export const zGetEmployeeParam = z.object({
	id: z.string(),
});

export const zUpdateEmployeeParam = z.object({
	id: z.string(),
});

export const zDeleteEmployeeParam = z.object({
	id: z.string(),
});

export const operations: {
	readonly [K in keyof Operations]: OperationSpec;
} = {
	listEmployees: {
		method: 'get',
		path: '/employees',
		honoPath: '/employees',
		tags: ['employees'],
		parameters: [
			{ name: 'page', in: 'query', required: false, explode: true, list: false },
			{ name: 'size', in: 'query', required: false, explode: true, list: false },
			{ name: 'status', in: 'query', required: false, explode: true, list: false },
		],
		param: none,
		query: zListEmployeesQuery,
		header: none,
		responses: {
			200: {
				'application/json': { kind: 'json', schema: z.array(zEmployee) },
			},
			400: {
				'application/json': { kind: 'json', schema: zErrorResponse },
			},
		},
	},
	createEmployee: {
		method: 'post',
		path: '/employees',
		honoPath: '/employees',
		tags: ['employees'],
		parameters: [],
		param: none,
		query: none,
		header: none,
		body: {
			required: true,
			content: {
				'application/json': { kind: 'json', schema: zNewEmployee },
			},
		},
		responses: {
			201: {
				'application/json': { kind: 'json', schema: zEmployee },
			},
			400: {
				'application/json': { kind: 'json', schema: zErrorResponse },
			},
		},
	},
	getEmployee: {
		method: 'get',
		path: '/employees/{id}',
		honoPath: '/employees/:id',
		tags: ['employees'],
		parameters: [
			{ name: 'id', in: 'path', required: true, explode: false, list: false },
		],
		param: zGetEmployeeParam,
		query: none,
		header: none,
		responses: {
			200: {
				'application/json': { kind: 'json', schema: zEmployee },
			},
			404: {
				'application/json': { kind: 'json', schema: zErrorResponse },
			},
		},
	},
	updateEmployee: {
		method: 'put',
		path: '/employees/{id}',
		honoPath: '/employees/:id',
		tags: ['employees'],
		parameters: [
			{ name: 'id', in: 'path', required: true, explode: false, list: false },
		],
		param: zUpdateEmployeeParam,
		query: none,
		header: none,
		body: {
			required: true,
			content: {
				'application/json': { kind: 'json', schema: zNewEmployee },
			},
		},
		responses: {
			200: {
				'application/json': { kind: 'json', schema: zEmployee },
			},
			404: {
				'application/json': { kind: 'json', schema: zErrorResponse },
			},
		},
	},
	deleteEmployee: {
		method: 'delete',
		path: '/employees/{id}',
		honoPath: '/employees/:id',
		tags: ['employees'],
		parameters: [
			{ name: 'id', in: 'path', required: true, explode: false, list: false },
		],
		param: zDeleteEmployeeParam,
		query: none,
		header: none,
		responses: {
			204: {},
			404: {
				'application/json': { kind: 'json', schema: zErrorResponse },
			},
		},
	},
};
"
`;

exports[`generated code is unchanged for split: split/paths.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/split/openapi.yaml. Do not edit.

import type { Employee, EmployeeStatus, ErrorResponse, NewEmployee } from './types.js';

export interface paths {
	'/employees': {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		get: operations['listEmployees'];
		put?: never;
		post: operations['createEmployee'];
		delete?: never;
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
	};
	'/employees/{id}': {
		parameters: {
			query?: never;
			header?: never;
			path: {
				/** The unique identifier of the entity. */
				id: string;
			};
			cookie?: never;
		};
		get: operations['getEmployee'];
		put: operations['updateEmployee'];
		post?: never;
		delete: operations['deleteEmployee'];
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
	};
}

export type webhooks = Record<string, never>;

export interface components {
	schemas: {
		EmployeeStatus: EmployeeStatus;
		NewEmployee: NewEmployee;
		Employee: Employee;
		ErrorResponse: ErrorResponse;
	};
	responses: never;
	parameters: never;
	requestBodies: never;
	headers: never;
	pathItems: never;
}

export type $defs = Record<string, never>;

export interface operations {
	listEmployees: {
		parameters: {
			query?: {
				/** The page number to return. */
				page?: number;
				/** The number of items to return per page. */
				size?: number;
				status?: EmployeeStatus;
			};
			header?: never;
			path?: never;
			cookie?: never;
		};
		requestBody?: never;
		responses: {
			/** The employees. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Employee[];
				};
			};
			/** The request was invalid. */
			400: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': ErrorResponse;
				};
			};
		};
	};
	createEmployee: {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		requestBody: {
			content: {
				'application/json': NewEmployee;
			};
		};
		responses: {
			/** Created. */
			201: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Employee;
				};
			};
			/** The request was invalid. */
			400: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': ErrorResponse;
				};
			};
		};
	};
	getEmployee: {
		parameters: {
			query?: never;
			header?: never;
			path: {
				/** The unique identifier of the entity. */
				id: string;
			};
			cookie?: never;
		};
		requestBody?: never;
		responses: {
			/** The employee. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Employee;
				};
			};
			/** The requested resource was not found. */
			404: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': ErrorResponse;
				};
			};
		};
	};
	updateEmployee: {
		parameters: {
			query?: never;
			header?: never;
			path: {
				/** The unique identifier of the entity. */
				id: string;
			};
			cookie?: never;
		};
		requestBody: {
			content: {
				'application/json': NewEmployee;
			};
		};
		responses: {
			/** The updated employee. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Employee;
				};
			};
			/** The requested resource was not found. */
			404: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': ErrorResponse;
				};
			};
		};
	};
	deleteEmployee: {
		parameters: {
			query?: never;
			header?: never;
			path: {
				/** The unique identifier of the entity. */
				id: string;
			};
			cookie?: never;
		};
		requestBody?: never;
		responses: {
			/** The resource was successfully deleted */
			204: {
				headers: {
					[name: string]: unknown;
				};
				content?: never;
			};
			/** The requested resource was not found. */
			404: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': ErrorResponse;
				};
			};
		};
	};
}
"
`;

exports[`generated code is unchanged for split: split/hono.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/split/openapi.yaml. Do not edit.

import type * as Hono from 'hono';
import * as runtime from '@nxgt/openapi-codegen/hono';
import { operations } from './operations.js';
import type {
	Employee,
	ErrorResponse,
	Operations,
	OperationsByRoute,
	OperationsByTag,
	PathsByMethod,
	PathsByTag,
} from './types.js';

/** What each operation may reply: a handler returning anything else does not compile. */
export interface Replies {
	listEmployees:
		| Hono.TypedResponse<Employee[], 200, 'json'>
		| Hono.TypedResponse<ErrorResponse, 400, 'json'>;
	createEmployee:
		| Hono.TypedResponse<Employee, 201, 'json'>
		| Hono.TypedResponse<ErrorResponse, 400, 'json'>;
	getEmployee:
		| Hono.TypedResponse<Employee, 200, 'json'>
		| Hono.TypedResponse<ErrorResponse, 404, 'json'>;
	updateEmployee:
		| Hono.TypedResponse<Employee, 200, 'json'>
		| Hono.TypedResponse<ErrorResponse, 404, 'json'>;
	deleteEmployee:
		| Hono.TypedResponse<null, 204, 'body'>
		| Hono.TypedResponse<ErrorResponse, 404, 'json'>;
}

/** The spec, as \`@nxgt/openapi-codegen/hono\` reads it. */
export interface HonoSpec {
	operations: Operations;
	replies: Replies;
	routes: OperationsByRoute;
	paths: PathsByMethod;
	tags: OperationsByTag;
	tagPaths: PathsByTag;
}

/**
 * One registry for the whole spec: \`api.routes(app)\` in each module, then
 * \`api.assertComplete()\` once every module is registered.
 */
export const createApi = (
	options?: runtime.ApiOptions,
): runtime.Api<HonoSpec> => runtime.createApi<HonoSpec>(operations, options);

/** Routes on one app, with a registry of their own. */
export const createRoutes = <
	Prefix extends string = '',
	Tag extends keyof OperationsByTag & string = never,
>(
	app: Hono.Hono<any, any, any>,
	options?: runtime.RoutesOptions<Prefix, Tag>,
): runtime.Routes<HonoSpec, runtime.ScopeOf<HonoSpec, Tag>, Prefix> =>
	createApi(options).routes(app, options);
"
`;

exports[`generated code is unchanged for query: query/types.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/query/openapi.yaml. Do not edit.

export interface Hit {
	id: string;
	score?: number | undefined;
}

export interface SearchEmployeesBody {
	name?: string | null | undefined;
	/** @default 20 */
	first: number;
}

/** \`SearchEmployeesBody\` as its validator accepts it, before defaults are filled in. */
export interface SearchEmployeesBodyInput {
	name?: string | null | undefined;
	/** @default 20 */
	first?: number | undefined;
}

export interface Operations {
	searchEmployees: {
		method: 'query';
		path: '/employees';
		honoPath: '/employees';
		param: {};
		query: {};
		header: {};
		json: SearchEmployeesBody;
		responses: {
			/** The matching employees. */
			200: {
				'application/json': Hit[];
			};
		};
	};
}

/** The operation behind each route: \`routes.put(path)\` finds it here. */
export interface OperationsByRoute {
	'query /employees': 'searchEmployees';
}

/** The paths with an operation for each method. */
export interface PathsByMethod {
	get: never;
	put: never;
	post: never;
	delete: never;
	options: never;
	head: never;
	patch: never;
	trace: never;
	query: '/employees';
}

/** The operations under each tag. */
export interface OperationsByTag {}

/** \`PathsByMethod\`, for each tag. */
export interface PathsByTag {}
"
`;

exports[`generated code is unchanged for query: query/zod.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/query/openapi.yaml. Do not edit.

import { z } from 'zod';

export const zHit = z.object({
	id: z.guid(),
	score: z.number().optional(),
});

export const zSearchEmployeesBody = z.object({
	name: z.string().nullable().optional(),
	first: z.int().min(1).max(100).default(20),
});
"
`;

exports[`generated code is unchanged for query: query/operations.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/query/openapi.yaml. Do not edit.

import { z } from 'zod';
import { zHit, zSearchEmployeesBody } from './zod.js';
import type { Operations } from './types.js';

/** How a server reads a parameter, and how a client writes it. */
export interface ParameterSpec {
	readonly name: string;
	readonly in: 'path' | 'query' | 'header';
	readonly required: boolean;
	/** A query list as \`?a=1&a=2\` (true) or \`?a=1,2\` (false). */
	readonly explode: boolean;
	/** Validated as a list: every value of a repeated query key, or one split on commas. */
	readonly list: boolean;
}

export interface MediaSpec {
	readonly kind: 'json' | 'form' | 'text' | 'binary';
	/** Absent for binary content, which is passed through unvalidated. */
	readonly schema?: z.ZodType;
}

export interface OperationSpec {
	readonly method: 'get' | 'put' | 'post' | 'delete' | 'options' | 'head' | 'patch' | 'trace' | 'query';
	readonly path: string;
	readonly honoPath: string;
	readonly tags: readonly string[];
	readonly parameters: readonly ParameterSpec[];
	/** Validates the path parameters, each read as a string. */
	readonly param: z.ZodType;
	/** Validates the query: a string per parameter, or every value of a list. */
	readonly query: z.ZodType;
	/** Validates the headers, keyed by lowercased name. */
	readonly header: z.ZodType;
	readonly body?: {
		readonly required: boolean;
		readonly content: { readonly [mediaType: string]: MediaSpec };
	};
	readonly responses: {
		readonly [status: number]: { readonly [mediaType: string]: MediaSpec };
	};
}

/** A location with no parameters declared: whatever arrives there is dropped. */
const none = z.object({});

export const operations: {
	readonly [K in keyof Operations]: OperationSpec;
} = {
	searchEmployees: {
		method: 'query',
		path: '/employees',
		honoPath: '/employees',
		tags: [],
		parameters: [],
		param: none,
		query: none,
		header: none,
		body: {
			required: true,
			content: {
				'application/json': { kind: 'json', schema: zSearchEmployeesBody },
			},
		},
		responses: {
			200: {
				'application/json': { kind: 'json', schema: z.array(zHit) },
			},
		},
	},
};
"
`;

exports[`generated code is unchanged for query: query/paths.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/query/openapi.yaml. Do not edit.

import type { Hit, SearchEmployeesBodyInput } from './types.js';

export interface paths {
	'/employees': {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		get?: never;
		put?: never;
		post?: never;
		delete?: never;
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
		query: operations['searchEmployees'];
	};
}

export type webhooks = Record<string, never>;

export interface components {
	schemas: {
		Hit: Hit;
	};
	responses: never;
	parameters: never;
	requestBodies: never;
	headers: never;
	pathItems: never;
}

export type $defs = Record<string, never>;

export interface operations {
	searchEmployees: {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		requestBody: {
			content: {
				'application/json': SearchEmployeesBodyInput;
			};
		};
		responses: {
			/** The matching employees. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Hit[];
				};
			};
		};
	};
}
"
`;

exports[`generated code is unchanged for query: query/hono.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/query/openapi.yaml. Do not edit.

import type * as Hono from 'hono';
import * as runtime from '@nxgt/openapi-codegen/hono';
import { operations } from './operations.js';
import type {
	Hit,
	Operations,
	OperationsByRoute,
	OperationsByTag,
	PathsByMethod,
	PathsByTag,
} from './types.js';

/** What each operation may reply: a handler returning anything else does not compile. */
export interface Replies {
	searchEmployees: Hono.TypedResponse<Hit[], 200, 'json'>;
}

/** The spec, as \`@nxgt/openapi-codegen/hono\` reads it. */
export interface HonoSpec {
	operations: Operations;
	replies: Replies;
	routes: OperationsByRoute;
	paths: PathsByMethod;
	tags: OperationsByTag;
	tagPaths: PathsByTag;
}

/**
 * One registry for the whole spec: \`api.routes(app)\` in each module, then
 * \`api.assertComplete()\` once every module is registered.
 */
export const createApi = (
	options?: runtime.ApiOptions,
): runtime.Api<HonoSpec> => runtime.createApi<HonoSpec>(operations, options);

/** Routes on one app, with a registry of their own. */
export const createRoutes = <
	Prefix extends string = '',
	Tag extends keyof OperationsByTag & string = never,
>(
	app: Hono.Hono<any, any, any>,
	options?: runtime.RoutesOptions<Prefix, Tag>,
): runtime.Routes<HonoSpec, runtime.ScopeOf<HonoSpec, Tag>, Prefix> =>
	createApi(options).routes(app, options);
"
`;

exports[`generated code is unchanged for kitchen-sink: kitchen-sink/types.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/kitchen-sink/openapi.yaml. Do not edit.

export interface Formats {
	when: string;
	day?: string | undefined;
	at?: string | undefined;
	took?: string | undefined;
	email?: string | undefined;
	site?: string | undefined;
	id?: string | undefined;
	v4?: string | undefined;
	v6?: string | undefined;
	blob?: string | undefined;
	code?: string | undefined;
	slug?: string | undefined;
}

/** Where an employee stands. */
export const Status = {
	Active: 'active',
	OnLeave: 'on_leave',
	Left: 'left',
} as const;
/** Where an employee stands. */
export type Status = (typeof Status)[keyof typeof Status];

export const Tier = {
	_1: 1,
	_2: 2,
	_3: 3,
} as const;
export type Tier = (typeof Tier)[keyof typeof Tier];

export const Grade = {
	Low: 'low',
	_2: 2,
} as const;
export type Grade = (typeof Grade)[keyof typeof Grade];

export const MaybeStatus = {
	On: 'on',
	Off: 'off',
} as const;
export type MaybeStatus = (typeof MaybeStatus)[keyof typeof MaybeStatus] | null;

export const Coded = {
	Alpha: 'a-1',
	Beta: 'b-2',
} as const;
export type Coded = (typeof Coded)[keyof typeof Coded];

export type Flagged = 'yes' | true;

export interface Numbers {
	count?: number | undefined;
	big?: number | undefined;
	ratio?: number | undefined;
	step?: number | undefined;
}

export interface Literals {
	status?: 'open' | 'closed' | undefined;
	maybe?: 'yes' | 'no' | null | undefined;
	one?: 1 | undefined;
	mixed?: 'a' | 1 | true | undefined;
}

export interface Defaults {
	/** @default 1 */
	page: number;
	/** @default 'asc' */
	sort: 'asc' | 'desc';
	/** @default {} */
	filter: {
		q?: string | undefined;
	};
	/** @default [] */
	tags: string[];
	/** @default null */
	note: string | null;
}

/** \`Defaults\` as its validator accepts it, before defaults are filled in. */
export interface DefaultsInput {
	/** @default 1 */
	page?: number | undefined;
	/** @default 'asc' */
	sort?: 'asc' | 'desc' | undefined;
	/** @default {} */
	filter?: {
		q?: string | undefined;
	} | undefined;
	/** @default [] */
	tags?: string[] | undefined;
	/** @default null */
	note?: string | null | undefined;
}

export interface UsesDefaults {
	defaults?: Defaults | undefined;
}

/** \`UsesDefaults\` as its validator accepts it, before defaults are filled in. */
export interface UsesDefaultsInput {
	defaults?: DefaultsInput | undefined;
}

export interface Maps {
	counts?: { [key: string]: number } | undefined;
	anything?: { [key: string]: unknown } | undefined;
	maybeObject?: {
		x?: string | undefined;
	} | null | undefined;
}

export interface Strict {
	a?: string | undefined;
}

export interface Loose {
	a?: string | undefined;
	[key: string]: unknown;
}

export type Catchall = {
	a?: number | undefined;
} & { [key: string]: number };

export interface Cat {
	kind: 'cat';
	lives: number;
}

export interface Dog {
	kind: 'dog';
	good?: boolean | undefined;
}

export type Pet = Cat | Dog;

export interface MaybePet {
	pet?: Pet | null | undefined;
}

export type StringOrNumber = string | number;

export interface Timestamps {
	createdAt?: string | undefined;
}

export interface Named extends Strict, Timestamps {
	name?: string | undefined;
	a: string;
}

export type Owned = Pet & {
	owner?: string | undefined;
};

export interface Tree {
	value: string;
	children?: Tree[] | undefined;
}

export type Nested = Nested[];

export interface Ping {
	pong?: Pong | undefined;
}

export interface Pong {
	n: number;
	ping?: Ping | undefined;
}

export interface Keys {
	'x-trace-id'?: string | undefined;
	['__proto__']?: string | undefined;
	default?: string | undefined;
}

/**
 * A schema with docs.
 * A second line, with *\\/ in it.
 * @deprecated
 */
export interface Documented {
	/**
	 * Use \`new\`.
	 * @deprecated
	 */
	old?: string | undefined;
}

export interface Upload {
	file?: globalThis.File | undefined;
	copies: number;
	/** @default false */
	public: boolean;
	labels?: string[] | undefined;
}

/** \`Upload\` as its validator accepts it, before defaults are filled in. */
export interface UploadInput {
	file?: globalThis.File | undefined;
	copies: number;
	/** @default false */
	public?: boolean | undefined;
	labels?: string[] | undefined;
}

/** A card or a bank account, and no key either one does not declare. */
export type Payment = {
	object: 'card';
	number: string;
} | {
	object: 'bank_account';
	account: string;
};

export type Identifier = Strict;

export interface GetPetParam {
	petId: number;
}

export interface GetPetQuery {
	/** Which fields to return. */
	fields?: string[] | undefined;
	ids?: number[] | undefined;
	/** @default false */
	verbose: boolean;
	level?: 1 | 2 | 'max' | undefined;
	tier?: Tier | undefined;
}

export interface GetPetHeader {
	'x-request-id': string;
}

export interface DeletePetParam {
	petId: number;
}

export interface PutTagsParam {
	petId: number;
}

export interface Operations {
	/** Fetch a pet. */
	getPet: {
		method: 'get';
		path: '/pets/{petId}';
		honoPath: '/pets/:petId';
		param: GetPetParam;
		query: GetPetQuery;
		header: GetPetHeader;
		responses: {
			/** The pet. */
			200: {
				'application/json': Pet;
			};
			/** Not modified. */
			304: {};
		};
	};
	/**
	 * Delete a pet.
	 *
	 * Pets are archived instead.
	 * @deprecated
	 */
	deletePet: {
		method: 'delete';
		path: '/pets/{petId}';
		honoPath: '/pets/:petId';
		param: DeletePetParam;
		query: {};
		header: {};
		responses: {
			/** Gone. */
			204: {};
		};
	};
	putTags: {
		method: 'put';
		path: '/pets/{petId}/tags';
		honoPath: '/pets/:petId/tags';
		param: PutTagsParam;
		query: {};
		header: {};
		json: string[];
		responses: {
			/** The tags. */
			200: {
				'application/json': string[];
			};
		};
	};
	upload: {
		method: 'post';
		path: '/uploads';
		honoPath: '/uploads';
		param: {};
		query: {};
		header: {};
		form: Upload | undefined;
		responses: {
			/** A receipt. */
			200: {
				'text/plain': string;
			};
			/** The document. */
			201: {
				'application/pdf': globalThis.Blob;
			};
		};
	};
}

/** The operation behind each route: \`routes.put(path)\` finds it here. */
export interface OperationsByRoute {
	'get /pets/{petId}': 'getPet';
	'delete /pets/{petId}': 'deletePet';
	'put /pets/{petId}/tags': 'putTags';
	'post /uploads': 'upload';
}

/** The paths with an operation for each method. */
export interface PathsByMethod {
	get: '/pets/{petId}';
	put: '/pets/{petId}/tags';
	post: '/uploads';
	delete: '/pets/{petId}';
	options: never;
	head: never;
	patch: never;
	trace: never;
	query: never;
}

/** The operations under each tag. */
export interface OperationsByTag {}

/** \`PathsByMethod\`, for each tag. */
export interface PathsByTag {}
"
`;

exports[`generated code is unchanged for kitchen-sink: kitchen-sink/zod.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/kitchen-sink/openapi.yaml. Do not edit.

import { z } from 'zod';
import { Coded, Grade, MaybeStatus, Status, Tier } from './types.js';
import type { Nested, Ping, Pong, Tree } from './types.js';

export const zFormats = z.object({
	when: z.iso.datetime({ offset: true }),
	day: z.iso.date().optional(),
	at: z.iso.time().optional(),
	took: z.iso.duration().optional(),
	email: z.email().optional(),
	site: z.url().optional(),
	id: z.guid().optional(),
	v4: z.ipv4().optional(),
	v6: z.ipv6().optional(),
	blob: z.base64().optional(),
	code: z.string().min(2).max(16).regex(/^[a-z]+\\/[0-9]+$/).optional(),
	slug: z.string().regex(/^[a-z/-]+$/).optional(),
});

/** Where an employee stands. */
export const zStatus = z.enum(Status);

export const zTier = z.enum(Tier);

export const zGrade = z.enum(Grade);

export const zMaybeStatus = z.enum(MaybeStatus).nullable();

export const zCoded = z.enum(Coded);

export const zFlagged = z.literal(['yes', true]);

export const zNumbers = z.object({
	count: z.int32().min(0).optional(),
	big: z.int().optional(),
	ratio: z.number().gt(0).lt(1).optional(),
	step: z.number().multipleOf(0.5).optional(),
});

export const zLiterals = z.object({
	status: z.enum(['open', 'closed']).optional(),
	maybe: z.enum(['yes', 'no']).nullable().optional(),
	one: z.literal(1).optional(),
	mixed: z.literal(['a', 1, true]).optional(),
});

export const zDefaults = z.object({
	page: z.int().min(1).default(1),
	sort: z.enum(['asc', 'desc']).default('asc'),
	filter: z.object({
		q: z.string().optional(),
	}).default(() => ({})),
	tags: z.array(z.string()).default(() => []),
	note: z.string().nullable().default(null),
});

export const zUsesDefaults = z.object({
	defaults: zDefaults.optional(),
});

export const zMaps = z.object({
	counts: z.record(z.string(), z.int()).optional(),
	anything: z.record(z.string(), z.unknown()).optional(),
	maybeObject: z.object({
		x: z.string().optional(),
	}).nullable().optional(),
});

export const zStrict = z.strictObject({
	a: z.string().optional(),
});

export const zLoose = z.looseObject({
	a: z.string().optional(),
});

export const zCatchall = z.object({
	a: z.int().optional(),
}).catchall(z.int());

export const zCat = z.object({
	kind: z.literal('cat'),
	lives: z.int(),
});

export const zDog = z.object({
	kind: z.literal('dog'),
	good: z.boolean().optional(),
});

export const zPet = z.discriminatedUnion('kind', [zCat, zDog]);

export const zMaybePet = z.object({
	pet: zPet.nullable().optional(),
});

export const zStringOrNumber = z.union([z.string(), z.number()]);

export const zTimestamps = z.object({
	createdAt: z.iso.datetime({ offset: true }).optional(),
});

export const zNamed = zStrict.extend(zTimestamps.shape).extend({
	name: z.string().optional(),
	a: z.string(),
}).strip();

export const zOwned = zPet.and(z.object({
	owner: z.string().optional(),
}));

export const zTree: z.ZodType<Tree, Tree> = z.object({
	value: z.string(),
	get children() {
		return z.array(zTree).optional();
	},
});

export const zNested: z.ZodType<Nested, Nested> = z.array(z.lazy(() => zNested));

export const zPing: z.ZodType<Ping, Ping> = z.object({
	get pong() {
		return zPong.optional();
	},
});

export const zPong: z.ZodType<Pong, Pong> = z.object({
	n: z.int(),
	ping: zPing.optional(),
});

export const zKeys = z.object({
	'x-trace-id': z.string().optional(),
	['__proto__']: z.string().optional(),
	default: z.string().optional(),
});

/**
 * A schema with docs.
 * A second line, with *\\/ in it.
 * @deprecated
 */
export const zDocumented = z.object({
	old: z.string().optional(),
});

export const zUpload = z.object({
	file: z.file().optional(),
	copies: z.int().min(1),
	public: z.boolean().default(false),
	labels: z.array(z.string()).optional(),
});

/** A card or a bank account, and no key either one does not declare. */
export const zPayment = z.union([
	z.strictObject({
		object: z.literal('card'),
		number: z.string(),
	}),
	z.strictObject({
		object: z.literal('bank_account'),
		account: z.string(),
	}),
]);

export const zIdentifier = zStrict;
"
`;

exports[`generated code is unchanged for kitchen-sink: kitchen-sink/operations.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/kitchen-sink/openapi.yaml. Do not edit.

import { z } from 'zod';
import { zPet, zTier } from './zod.js';
import type { Operations } from './types.js';

/** How a server reads a parameter, and how a client writes it. */
export interface ParameterSpec {
	readonly name: string;
	readonly in: 'path' | 'query' | 'header';
	readonly required: boolean;
	/** A query list as \`?a=1&a=2\` (true) or \`?a=1,2\` (false). */
	readonly explode: boolean;
	/** Validated as a list: every value of a repeated query key, or one split on commas. */
	readonly list: boolean;
}

export interface MediaSpec {
	readonly kind: 'json' | 'form' | 'text' | 'binary';
	/** Absent for binary content, which is passed through unvalidated. */
	readonly schema?: z.ZodType;
}

export interface OperationSpec {
	readonly method: 'get' | 'put' | 'post' | 'delete' | 'options' | 'head' | 'patch' | 'trace' | 'query';
	readonly path: string;
	readonly honoPath: string;
	readonly tags: readonly string[];
	readonly parameters: readonly ParameterSpec[];
	/** Validates the path parameters, each read as a string. */
	readonly param: z.ZodType;
	/** Validates the query: a string per parameter, or every value of a list. */
	readonly query: z.ZodType;
	/** Validates the headers, keyed by lowercased name. */
	readonly header: z.ZodType;
	readonly body?: {
		readonly required: boolean;
		readonly content: { readonly [mediaType: string]: MediaSpec };
	};
	readonly responses: {
		readonly [status: number]: { readonly [mediaType: string]: MediaSpec };
	};
}

/** \`true\` or \`false\`, as JSON spells them. */
const flag = z.stringbool({ truthy: ['true'], falsy: ['false'] });

/** A location with no parameters declared: whatever arrives there is dropped. */
const none = z.object({});

/** A number in a path, a query or a header: digits, where z.coerce.number() would read '' as 0. */
const numeric = z
	.string()
	.regex(/^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?(?:[eE][+-]?\\d+)?$/)
	.transform(Number);

/** A form field that may repeat: one value arrives alone, several as a list. */
const repeated = (value: unknown) =>
	value === undefined || Array.isArray(value) ? value : [value];

export const zGetPetParam = z.object({
	petId: numeric.pipe(z.int().min(1)),
});

export const zGetPetQuery = z.object({
	fields: z.array(z.string()).optional(),
	ids: z.array(numeric.pipe(z.int())).optional(),
	verbose: flag.default(false),
	level: z.union([numeric.pipe(z.literal([1, 2])), z.literal('max')]).optional(),
	tier: numeric.pipe(zTier).optional(),
});

export const zGetPetHeader = z.object({
	'x-request-id': z.guid(),
});

export const zDeletePetParam = z.object({
	petId: numeric.pipe(z.int().min(1)),
});

export const zPutTagsParam = z.object({
	petId: numeric.pipe(z.int()),
});

/** \`upload\`'s form body, its fields read from text. */
export const zUploadForm = z.object({
	file: z.file().optional(),
	copies: numeric.pipe(z.int().min(1)),
	public: flag.default(false),
	labels: z.preprocess(repeated, z.array(z.string())).optional(),
});

export const operations: {
	readonly [K in keyof Operations]: OperationSpec;
} = {
	getPet: {
		method: 'get',
		path: '/pets/{petId}',
		honoPath: '/pets/:petId',
		tags: [],
		parameters: [
			{ name: 'petId', in: 'path', required: true, explode: false, list: false },
			{ name: 'fields', in: 'query', required: false, explode: true, list: true },
			{ name: 'ids', in: 'query', required: false, explode: false, list: true },
			{ name: 'verbose', in: 'query', required: false, explode: true, list: false },
			{ name: 'level', in: 'query', required: false, explode: true, list: false },
			{ name: 'tier', in: 'query', required: false, explode: true, list: false },
			{ name: 'X-Request-Id', in: 'header', required: true, explode: false, list: false },
		],
		param: zGetPetParam,
		query: zGetPetQuery,
		header: zGetPetHeader,
		responses: {
			200: {
				'application/json': { kind: 'json', schema: zPet },
			},
			304: {},
		},
	},
	deletePet: {
		method: 'delete',
		path: '/pets/{petId}',
		honoPath: '/pets/:petId',
		tags: [],
		parameters: [
			{ name: 'petId', in: 'path', required: true, explode: false, list: false },
		],
		param: zDeletePetParam,
		query: none,
		header: none,
		responses: {
			204: {},
		},
	},
	putTags: {
		method: 'put',
		path: '/pets/{petId}/tags',
		honoPath: '/pets/:petId/tags',
		tags: [],
		parameters: [
			{ name: 'petId', in: 'path', required: true, explode: false, list: false },
		],
		param: zPutTagsParam,
		query: none,
		header: none,
		body: {
			required: true,
			content: {
				'application/json': { kind: 'json', schema: z.array(z.string()) },
			},
		},
		responses: {
			200: {
				'application/json': { kind: 'json', schema: z.array(z.string()) },
			},
		},
	},
	upload: {
		method: 'post',
		path: '/uploads',
		honoPath: '/uploads',
		tags: [],
		parameters: [],
		param: none,
		query: none,
		header: none,
		body: {
			required: false,
			content: {
				'multipart/form-data': { kind: 'form', schema: zUploadForm },
				'application/octet-stream': { kind: 'binary' },
			},
		},
		responses: {
			200: {
				'text/plain': { kind: 'text', schema: z.string() },
			},
			201: {
				'application/pdf': { kind: 'binary' },
			},
		},
	},
};
"
`;

exports[`generated code is unchanged for kitchen-sink: kitchen-sink/paths.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/kitchen-sink/openapi.yaml. Do not edit.

import type {
	Cat,
	Catchall,
	Coded,
	Defaults,
	Documented,
	Dog,
	Flagged,
	Formats,
	Grade,
	Keys,
	Literals,
	Loose,
	Maps,
	MaybePet,
	MaybeStatus,
	Named,
	Nested,
	Numbers,
	Owned,
	Payment,
	Pet,
	Ping,
	Pong,
	Status,
	Strict,
	StringOrNumber,
	Tier,
	Timestamps,
	Tree,
	Upload,
	UploadInput,
	UsesDefaults,
} from './types.js';

export interface paths {
	'/pets/{petId}': {
		parameters: {
			query?: never;
			header?: never;
			path: {
				petId: number;
			};
			cookie?: never;
		};
		/** Fetch a pet. */
		get: operations['getPet'];
		put?: never;
		post?: never;
		/**
		 * Delete a pet.
		 *
		 * Pets are archived instead.
		 * @deprecated
		 */
		delete: operations['deletePet'];
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
	};
	'/pets/{petId}/tags': {
		parameters: {
			query?: never;
			header?: never;
			path: {
				petId: number;
			};
			cookie?: never;
		};
		get?: never;
		put: operations['putTags'];
		post?: never;
		delete?: never;
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
	};
	'/uploads': {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		get?: never;
		put?: never;
		post: operations['upload'];
		delete?: never;
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
	};
}

export type webhooks = Record<string, never>;

export interface components {
	schemas: {
		Formats: Formats;
		Status: Status;
		Tier: Tier;
		Grade: Grade;
		MaybeStatus: MaybeStatus;
		Coded: Coded;
		Flagged: Flagged;
		Numbers: Numbers;
		Literals: Literals;
		Defaults: Defaults;
		UsesDefaults: UsesDefaults;
		Maps: Maps;
		Strict: Strict;
		Loose: Loose;
		Catchall: Catchall;
		Cat: Cat;
		Dog: Dog;
		Pet: Pet;
		MaybePet: MaybePet;
		StringOrNumber: StringOrNumber;
		Timestamps: Timestamps;
		Named: Named;
		Owned: Owned;
		Tree: Tree;
		Nested: Nested;
		Ping: Ping;
		Pong: Pong;
		Keys: Keys;
		Documented: Documented;
		Upload: Upload;
		Payment: Payment;
		Identifier: Strict;
	};
	responses: never;
	parameters: never;
	requestBodies: never;
	headers: never;
	pathItems: never;
}

export type $defs = Record<string, never>;

export interface operations {
	/** Fetch a pet. */
	getPet: {
		parameters: {
			query?: {
				/** Which fields to return. */
				fields?: string[];
				ids?: number[];
				/** @default false */
				verbose?: boolean;
				level?: 1 | 2 | 'max';
				tier?: Tier;
			};
			header: {
				'X-Request-Id': string;
			};
			path: {
				petId: number;
			};
			cookie?: never;
		};
		requestBody?: never;
		responses: {
			/** The pet. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Pet;
				};
			};
			/** Not modified. */
			304: {
				headers: {
					[name: string]: unknown;
				};
				content?: never;
			};
		};
	};
	/**
	 * Delete a pet.
	 *
	 * Pets are archived instead.
	 * @deprecated
	 */
	deletePet: {
		parameters: {
			query?: never;
			header?: never;
			path: {
				petId: number;
			};
			cookie?: never;
		};
		requestBody?: never;
		responses: {
			/** Gone. */
			204: {
				headers: {
					[name: string]: unknown;
				};
				content?: never;
			};
		};
	};
	putTags: {
		parameters: {
			query?: never;
			header?: never;
			path: {
				petId: number;
			};
			cookie?: never;
		};
		requestBody: {
			content: {
				'application/json': string[];
			};
		};
		responses: {
			/** The tags. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': string[];
				};
			};
		};
	};
	upload: {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		requestBody?: {
			content: {
				'multipart/form-data': UploadInput;
				'application/octet-stream': globalThis.Blob;
			};
		};
		responses: {
			/** A receipt. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'text/plain': string;
				};
			};
			/** The document. */
			201: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/pdf': globalThis.Blob;
				};
			};
		};
	};
}
"
`;

exports[`generated code is unchanged for kitchen-sink: kitchen-sink/hono.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/kitchen-sink/openapi.yaml. Do not edit.

import type * as Hono from 'hono';
import * as runtime from '@nxgt/openapi-codegen/hono';
import { operations } from './operations.js';
import type {
	Operations,
	OperationsByRoute,
	OperationsByTag,
	PathsByMethod,
	PathsByTag,
	Pet,
} from './types.js';

/** What each operation may reply: a handler returning anything else does not compile. */
export interface Replies {
	/** Fetch a pet. */
	getPet:
		| Hono.TypedResponse<Pet, 200, 'json'>
		| Hono.TypedResponse<null, 304, 'body'>;
	/**
	 * Delete a pet.
	 *
	 * Pets are archived instead.
	 * @deprecated
	 */
	deletePet: Hono.TypedResponse<null, 204, 'body'>;
	putTags: Hono.TypedResponse<string[], 200, 'json'>;
	upload:
		| Hono.TypedResponse<string, 200, 'text'>
		| Hono.TypedResponse<unknown, 201, 'body'>;
}

/** The spec, as \`@nxgt/openapi-codegen/hono\` reads it. */
export interface HonoSpec {
	operations: Operations;
	replies: Replies;
	routes: OperationsByRoute;
	paths: PathsByMethod;
	tags: OperationsByTag;
	tagPaths: PathsByTag;
}

/**
 * One registry for the whole spec: \`api.routes(app)\` in each module, then
 * \`api.assertComplete()\` once every module is registered.
 */
export const createApi = (
	options?: runtime.ApiOptions,
): runtime.Api<HonoSpec> => runtime.createApi<HonoSpec>(operations, options);

/** Routes on one app, with a registry of their own. */
export const createRoutes = <
	Prefix extends string = '',
	Tag extends keyof OperationsByTag & string = never,
>(
	app: Hono.Hono<any, any, any>,
	options?: runtime.RoutesOptions<Prefix, Tag>,
): runtime.Routes<HonoSpec, runtime.ScopeOf<HonoSpec, Tag>, Prefix> =>
	createApi(options).routes(app, options);
"
`;

exports[`generated code is unchanged for dates: dates/types.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/dates/openapi.yaml. Do not edit.

export type Timestamp = Date;

/** \`Timestamp\` as its validator accepts it: dates as strings, defaults not filled in yet. */
export type TimestampInput = string;

export interface NewEvent {
	title: string;
	startsAt: Timestamp;
	endsAt?: Date | null | undefined;
	/** @default '2024-01-01T09:00:00Z' */
	remindAt: Date;
	/** A day is not an instant, so it stays a string. */
	day?: string | undefined;
}

/** \`NewEvent\` as its validator accepts it: dates as strings, defaults not filled in yet. */
export interface NewEventInput {
	title: string;
	startsAt: TimestampInput;
	endsAt?: string | null | undefined;
	/** @default '2024-01-01T09:00:00Z' */
	remindAt?: string | undefined;
	/** A day is not an instant, so it stays a string. */
	day?: string | undefined;
}

export interface Event extends NewEvent {
	id: string;
	createdAt: Date;
	history?: Timestamp[] | undefined;
	parent?: Event | undefined;
}

/** \`Event\` as its validator accepts it: dates as strings, defaults not filled in yet. */
export interface EventInput extends NewEventInput {
	id: string;
	createdAt: string;
	history?: TimestampInput[] | undefined;
	parent?: EventInput | undefined;
}

export interface RescheduleEventBody {
	at: Date;
	notify?: Date[] | undefined;
}

/** \`RescheduleEventBody\` as its validator accepts it: dates as strings, defaults not filled in yet. */
export interface RescheduleEventBodyInput {
	at: string;
	notify?: string[] | undefined;
}

export interface ListEventsQuery {
	since?: Date | undefined;
	day?: string | undefined;
}

export interface RescheduleEventParam {
	id: string;
}

export interface Operations {
	listEvents: {
		method: 'get';
		path: '/events';
		honoPath: '/events';
		param: {};
		query: ListEventsQuery;
		header: {};
		responses: {
			/** The events. */
			200: {
				'application/json': Event[];
			};
		};
	};
	createEvent: {
		method: 'post';
		path: '/events';
		honoPath: '/events';
		param: {};
		query: {};
		header: {};
		json: NewEvent;
		responses: {
			/** Created. */
			201: {
				'application/json': Event;
			};
		};
	};
	rescheduleEvent: {
		method: 'post';
		path: '/events/{id}/reschedule';
		honoPath: '/events/:id/reschedule';
		param: RescheduleEventParam;
		query: {};
		header: {};
		form: RescheduleEventBody;
		responses: {
			/** Rescheduled. */
			204: {};
		};
	};
}

/** The operation behind each route: \`routes.put(path)\` finds it here. */
export interface OperationsByRoute {
	'get /events': 'listEvents';
	'post /events': 'createEvent';
	'post /events/{id}/reschedule': 'rescheduleEvent';
}

/** The paths with an operation for each method. */
export interface PathsByMethod {
	get: '/events';
	put: never;
	post: '/events' | '/events/{id}/reschedule';
	delete: never;
	options: never;
	head: never;
	patch: never;
	trace: never;
	query: never;
}

/** The operations under each tag. */
export interface OperationsByTag {}

/** \`PathsByMethod\`, for each tag. */
export interface PathsByTag {}

/** \`T\` as JSON carries it: a \`Date\` travels as its ISO string. */
export type Wire<T> = T extends Date
	? string
	: T extends globalThis.Blob
		? T
		: T extends object
			? { [K in keyof T]: Wire<T[K]> }
			: T;
"
`;

exports[`generated code is unchanged for dates: dates/zod.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/dates/openapi.yaml. Do not edit.

import { z } from 'zod';
import type { Event, EventInput } from './types.js';

/** An RFC 3339 date-time, decoded to a Date and encoded back. */
const isoDate = {
	decode: (value: string): Date => new Date(value),
	encode: (date: Date): string => date.toISOString(),
};

export const zTimestamp = z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate);

export const zNewEvent = z.object({
	title: z.string(),
	startsAt: zTimestamp,
	endsAt: z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate).nullable().optional(),
	remindAt: z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate).prefault('2024-01-01T09:00:00Z'),
	day: z.iso.date().optional(),
});

export const zEvent: z.ZodType<Event, EventInput> = zNewEvent.extend({
	id: z.string(),
	createdAt: z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate),
	history: z.array(zTimestamp).optional(),
	get parent() {
		return zEvent.optional();
	},
});

export const zRescheduleEventBody = z.object({
	at: z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate),
	notify: z.array(z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate)).optional(),
});
"
`;

exports[`generated code is unchanged for dates: dates/operations.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/dates/openapi.yaml. Do not edit.

import { z } from 'zod';
import { zEvent, zNewEvent } from './zod.js';
import type { Operations } from './types.js';

/** How a server reads a parameter, and how a client writes it. */
export interface ParameterSpec {
	readonly name: string;
	readonly in: 'path' | 'query' | 'header';
	readonly required: boolean;
	/** A query list as \`?a=1&a=2\` (true) or \`?a=1,2\` (false). */
	readonly explode: boolean;
	/** Validated as a list: every value of a repeated query key, or one split on commas. */
	readonly list: boolean;
}

export interface MediaSpec {
	readonly kind: 'json' | 'form' | 'text' | 'binary';
	/** Absent for binary content, which is passed through unvalidated. */
	readonly schema?: z.ZodType;
}

export interface OperationSpec {
	readonly method: 'get' | 'put' | 'post' | 'delete' | 'options' | 'head' | 'patch' | 'trace' | 'query';
	readonly path: string;
	readonly honoPath: string;
	readonly tags: readonly string[];
	readonly parameters: readonly ParameterSpec[];
	/** Validates the path parameters, each read as a string. */
	readonly param: z.ZodType;
	/** Validates the query: a string per parameter, or every value of a list. */
	readonly query: z.ZodType;
	/** Validates the headers, keyed by lowercased name. */
	readonly header: z.ZodType;
	readonly body?: {
		readonly required: boolean;
		readonly content: { readonly [mediaType: string]: MediaSpec };
	};
	readonly responses: {
		readonly [status: number]: { readonly [mediaType: string]: MediaSpec };
	};
}

/** An RFC 3339 date-time, decoded to a Date and encoded back. */
const isoDate = {
	decode: (value: string): Date => new Date(value),
	encode: (date: Date): string => date.toISOString(),
};

/** A location with no parameters declared: whatever arrives there is dropped. */
const none = z.object({});

/** A form field that may repeat: one value arrives alone, several as a list. */
const repeated = (value: unknown) =>
	value === undefined || Array.isArray(value) ? value : [value];

export const zListEventsQuery = z.object({
	since: z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate).optional(),
	day: z.iso.date().optional(),
});

export const zRescheduleEventParam = z.object({
	id: z.string(),
});

/** \`rescheduleEvent\`'s form body, its fields read from text. */
export const zRescheduleEventForm = z.object({
	at: z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate),
	notify: z.preprocess(repeated, z.array(z.codec(z.iso.datetime({ offset: true }), z.date(), isoDate))).optional(),
});

export const operations: {
	readonly [K in keyof Operations]: OperationSpec;
} = {
	listEvents: {
		method: 'get',
		path: '/events',
		honoPath: '/events',
		tags: [],
		parameters: [
			{ name: 'since', in: 'query', required: false, explode: true, list: false },
			{ name: 'day', in: 'query', required: false, explode: true, list: false },
		],
		param: none,
		query: zListEventsQuery,
		header: none,
		responses: {
			200: {
				'application/json': { kind: 'json', schema: z.array(zEvent) },
			},
		},
	},
	createEvent: {
		method: 'post',
		path: '/events',
		honoPath: '/events',
		tags: [],
		parameters: [],
		param: none,
		query: none,
		header: none,
		body: {
			required: true,
			content: {
				'application/json': { kind: 'json', schema: zNewEvent },
			},
		},
		responses: {
			201: {
				'application/json': { kind: 'json', schema: zEvent },
			},
		},
	},
	rescheduleEvent: {
		method: 'post',
		path: '/events/{id}/reschedule',
		honoPath: '/events/:id/reschedule',
		tags: [],
		parameters: [
			{ name: 'id', in: 'path', required: true, explode: false, list: false },
		],
		param: zRescheduleEventParam,
		query: none,
		header: none,
		body: {
			required: true,
			content: {
				'application/x-www-form-urlencoded': { kind: 'form', schema: zRescheduleEventForm },
			},
		},
		responses: {
			204: {},
		},
	},
};
"
`;

exports[`generated code is unchanged for dates: dates/paths.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/dates/openapi.yaml. Do not edit.

import type {
	Event,
	NewEvent,
	NewEventInput,
	RescheduleEventBodyInput,
	Timestamp,
	Wire,
} from './types.js';

export interface paths {
	'/events': {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		get: operations['listEvents'];
		put?: never;
		post: operations['createEvent'];
		delete?: never;
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
	};
	'/events/{id}/reschedule': {
		parameters: {
			query?: never;
			header?: never;
			path: {
				id: string;
			};
			cookie?: never;
		};
		get?: never;
		put?: never;
		post: operations['rescheduleEvent'];
		delete?: never;
		options?: never;
		head?: never;
		patch?: never;
		trace?: never;
	};
}

export type webhooks = Record<string, never>;

export interface components {
	schemas: {
		Timestamp: Wire<Timestamp>;
		NewEvent: Wire<NewEvent>;
		Event: Wire<Event>;
	};
	responses: never;
	parameters: never;
	requestBodies: never;
	headers: never;
	pathItems: never;
}

export type $defs = Record<string, never>;

export interface operations {
	listEvents: {
		parameters: {
			query?: {
				since?: string;
				day?: string;
			};
			header?: never;
			path?: never;
			cookie?: never;
		};
		requestBody?: never;
		responses: {
			/** The events. */
			200: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Wire<Event[]>;
				};
			};
		};
	};
	createEvent: {
		parameters: {
			query?: never;
			header?: never;
			path?: never;
			cookie?: never;
		};
		requestBody: {
			content: {
				'application/json': NewEventInput;
			};
		};
		responses: {
			/** Created. */
			201: {
				headers: {
					[name: string]: unknown;
				};
				content: {
					'application/json': Wire<Event>;
				};
			};
		};
	};
	rescheduleEvent: {
		parameters: {
			query?: never;
			header?: never;
			path: {
				id: string;
			};
			cookie?: never;
		};
		requestBody: {
			content: {
				'application/x-www-form-urlencoded': RescheduleEventBodyInput;
			};
		};
		responses: {
			/** Rescheduled. */
			204: {
				headers: {
					[name: string]: unknown;
				};
				content?: never;
			};
		};
	};
}
"
`;

exports[`generated code is unchanged for dates: dates/hono.ts 1`] = `
"// Generated by @nxgt/openapi-codegen from ../../fixtures/dates/openapi.yaml. Do not edit.

import type * as Hono from 'hono';
import * as runtime from '@nxgt/openapi-codegen/hono';
import { operations } from './operations.js';
import type {
	Event,
	Operations,
	OperationsByRoute,
	OperationsByTag,
	PathsByMethod,
	PathsByTag,
	Wire,
} from './types.js';

/** What each operation may reply: a handler returning anything else does not compile. */
export interface Replies {
	listEvents: Hono.TypedResponse<Wire<Event[]>, 200, 'json'>;
	createEvent: Hono.TypedResponse<Wire<Event>, 201, 'json'>;
	rescheduleEvent: Hono.TypedResponse<null, 204, 'body'>;
}

/** The spec, as \`@nxgt/openapi-codegen/hono\` reads it. */
export interface HonoSpec {
	operations: Operations;
	replies: Replies;
	routes: OperationsByRoute;
	paths: PathsByMethod;
	tags: OperationsByTag;
	tagPaths: PathsByTag;
}

/**
 * One registry for the whole spec: \`api.routes(app)\` in each module, then
 * \`api.assertComplete()\` once every module is registered.
 */
export const createApi = (
	options?: runtime.ApiOptions,
): runtime.Api<HonoSpec> => runtime.createApi<HonoSpec>(operations, options);

/** Routes on one app, with a registry of their own. */
export const createRoutes = <
	Prefix extends string = '',
	Tag extends keyof OperationsByTag & string = never,
>(
	app: Hono.Hono<any, any, any>,
	options?: runtime.RoutesOptions<Prefix, Tag>,
): runtime.Routes<HonoSpec, runtime.ScopeOf<HonoSpec, Tag>, Prefix> =>
	createApi(options).routes(app, options);
"
`;
